# book-cleaning

./: .gitignore  README_UDP.md  UDP_PLAN.md  markdown_post_processor.py  pyproject.toml  tasks.md  unit2_processor.py
.claude/: settings.local.json
archive/: ocr_corrector.py
archive/old_formatters/: book_formatter.py  book_formatter_v2.py  format_book.py  mistral_ex.py
archive/test_scripts/: example_based_formatter.py  precise_formatter.py  test_improved.py  test_sample.py
archive/v1_experiments/: gemini_ocr_formatter.py  hybrid_ocr_qa.py  mistral_page_processor.py  ocr_comparison.py  practical_hybrid_ocr.py  process_unit2.py
papers/: We_only_learn_language_once-The_role_of_the_mother_tongue_in_FL_classrooms-death_of_a_dogma.doc
universal_doc_processor/: __init__.py  cli.py  models.py  processor.py
universal_doc_processor/profiles/: __init__.py  academic_paper.py  language_textbook.py
universal_doc_processor/utils/: __init__.py  post_processor.py
